[build-system]
requires = ["hatchling", "hatch-regex-commit"]
build-backend = "hatchling.build"

[project]
name = "AprilGrid"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0 OR MIT"
dependencies = [
  "scipy"
]

[tool.hatch.version]
source = "regex_commit"
path = "src/aprilgrid/__about__.py"
[tool]

[tool.hatch.envs.default]
pre-install-commands = [
  "hatch version dev",
]